<resources>
    <string name="app_name">Desafios</string>
    <string name="activity_name_par_ou_impar">Par ou Ímpar</string>
    <string name="voltar">Voltar</string>
    <string name="numero">Número</string>
    <string name="verificar">Verificar</string>
    <string name="resultado">Resultado</string>
    <string name="activity_name_ano_bissexto">Ano Bissexto</string>
    <string name="activity_name_conversor_de_temperatura">Conversor de Temperatura</string>
    <string name="ano">Ano</string>
    <string name="para">para :</string>
    <string name="de">de :</string>
    <string name="temperatura">Temperatura</string>
    <string name="converter">Converter</string>
    <string name="ate">até :</string>
    <string name="activity_name_conversor_de_comprimento">Conversor de Comprimento</string>
    <string name="comprimento">Comprimento</string>
    <string name="activity_name_chopp_ware">Chopp Ware</string>
</resources>
