<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AnoBissextoActivity"
>

    <TextView
            android:text="@string/activity_name_ano_bissexto"
            android:textSize="@dimen/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <ScrollView
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_back"
    >

        <LinearLayout
                android:id="@+id/linearLayout"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >

            <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginBottom="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >
                <EditText
                        android:id="@+id/edt_de_ano_bissexto"
                        android:hint="@string/de"
                        android:inputType="number"
                        android:layout_weight="0.5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />

                <EditText
                        android:id="@+id/edt_ate_ano_bissexto"
                        android:hint="@string/ate"
                        android:inputType="number"
                        android:layout_weight="0.5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />

            </LinearLayout>

            <Spinner
                    android:id="@+id/spn_result_ano_bissexto"
                    android:layout_marginBottom="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >

            </Spinner>

            <Button
                    android:id="@+id/btn_verificar_de_ate_ano_bissexto"
                    android:text="@string/verificar"
                    android:layout_marginBottom="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

            <EditText
                    android:id="@+id/edt_num_ano_bissexto"
                    android:hint="@string/ano"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:inputType="number"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
            />

            <TextView
                    android:id="@+id/txv_result_ano_bissexto"
                    android:hint="@string/resultado"
                    android:layout_marginBottom="25dp"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
            />

            <Button
                    android:id="@+id/btn_verificar_ano_bissexto"
                    android:text="@string/verificar"
                    android:layout_marginBottom="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

        </LinearLayout>

    </ScrollView>

    <Button
            android:id="@+id/btn_back"
            android:text="@string/voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="17dp"
            app:layout_constraintEnd_toEndOf="parent"
    />
</android.support.constraint.ConstraintLayout>