<?xml version="1.0" encoding="utf-8"?>

<!-- TODO! Assim que faz um TODO no XML -->

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/txv_title_mainScreen"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_title"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <ScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_height="300dp"
            android:layout_width="230dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_title_mainScreen"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/Pedding"
                android:orientation="vertical"
        >
            <!-- TODO! Mudar texto nos Botoẽs -->
            <Button
                    android:id="@+id/btn_to_screen_par_ou_impar"
                    android:text="@string/activity_name_par_ou_impar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/Pedding"
                    android:textAlignment="center"
            />
            <Button
                    android:id="@+id/btn_to_screen_ano_bissesto"
                    android:text="@string/activity_name_ano_bissesto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/Pedding"
                    android:textAlignment="center"
            />
            <Button
                    android:id="@+id/btn_to_screen_conversor_temperatura"
                    android:text="@string/activity_name_conversor_de_temperatura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/Pedding"
                    android:textAlignment="center"
            />
            <Button
                    android:id="@+id/btn_to_screen_4"
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/Pedding"
                    android:textAlignment="center"
            />
            <Button
                    android:id="@+id/btn_to_screen_5"
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/Pedding"
                    android:textAlignment="center"
            />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>